--- a/css/sPosting.css
+++ b/css/sPosting.css
@@ -65,8 +65,8 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .detailWrite { padding: 25px 30px; margin: 30px 0 40px 0; border: 1px solid #ddd; border-radius: 10px; } 
 
 .imgUpAll { background: #FFF; margin: 1em auto; min-height: 300px;  } 
-.imgUpAll span { margin-left: 5px; color: #333; font-size: 20px; font-family: pBold;}
-#fileInput { display: none; }
+.imgUpAll span { display: inline-block; margin: 10px 0 0 5px; color: #333; font-size: 20px; font-family: pBold;}
+#fileInput, #bgInput { display: none; }
 .uploadedBtn { display: none;  margin-left: 10px; padding: 7px 12px; border-radius: 10px; color: #444; background: #e8e8e8; font-size: 15px; font-family: pSemi; transition: all .2s; cursor: pointer;}
 .uploadedBtn.uploaded { display: inline-block;  }
 .uploadedBtn.uploaded:hover { background: #ffd4389f; }
@@ -77,14 +77,17 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .fileLabel:hover { background: #0000002b; opacity: 0.9;}
 
 .imgArea { display: flex; align-items: center; margin: 25px 0;  width: 100%; height: 460px; overflow: hidden; background: #eee; border-radius: 8px; } 
-.imgArea img { width: 100%; } 
+.infoImg { justify-content: center;}
+.infoImg img { height: 100%; }
+.bgImg img { width: 100%; }
 
-.titleBox input { margin: 10px 0 30px 0; padding: 10px 15px; width: 97%; border-radius: 8px; border: 1px solid var(--color-line); outline: 2px solid transparent; font-size: 18px; font-family: pMedium; transition: all .2s; }
+.titleBox span { display: inline-block; margin: 10px 0 0 5px; color: #333; font-size: 20px; font-family: pBold;}
+.titleBox input { margin: 25px 0 20px 0; padding: 10px 15px; width: 97%; border-radius: 8px; border: 1px solid var(--color-line); outline: 2px solid transparent; font-size: 18px; font-family: pMedium; transition: all .2s; }
 .titleBox input:focus { border-color: transparent; outline-color: #2ce126; } 
 
-.contxtAll span { margin-left: 5px; color: #333; font-size: 20px; font-family: pBold;}
+.contxtAll span { display: inline-block; margin: 10px 0 0 5px; color: #333; font-size: 20px; font-family: pBold;}
 .contextBox { padding: 15px; margin: 25px 0; border: 1px solid var(--color-line); outline: 2px solid transparent; border-radius: 10px; }
-.contextBox textarea { width: 100%; height: 300px;  font-family: pRegular; font-size: 16px; line-height: 140%; resize: none;}
+.contextBox textarea { width: 100%; height: 180px;  font-family: pRegular; font-size: 16px; line-height: 140%; resize: none;}
 .contextBox:focus-within { border-color: transparent; outline-color: #2ce126; } 
 
 .infoBottom { display: flex; align-items: center; }
