--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -11,7 +11,7 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px;}
 .postBtn:hover { background: var(--color-sub);}
 
 .schAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; }
-.schOne { width: calc(100vw * 360 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b;}
+.schOne { width: calc(100vw * 360 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0; padding-bottom: 10px; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b;}
 .schTopInfo { position: absolute; top: 5%; left: 4.5%; width: calc(100vw * 275 / 1920); padding: 12px 20px; display: flex; align-items: center;  justify-content: space-between; background: #fff; font-size: 13px; border-radius: 15px; box-shadow: 1px 1px 6px #a7a7a7; line-height: 125%; z-index: 10;}
 .schTopInfo .schUser { display: flex; align-items: center;}
 .schTopInfo .schUser img { margin-right: 10px; width: 35px; border-radius: 20px;}
@@ -25,8 +25,9 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px;}
 
 .schBottom { height: 60px; display: flex; align-items: center; justify-content: space-around; font-size: 15px;}
 .schBottom > * { width: 50%; height: 50%; text-align: center; display: flex; align-items: center; justify-content: center;}
-.schBottom .schLoc { margin-left: 20px; position: relative; border-right: 1px solid var(--color-line);}
-.schBottom .schLoc::before { position: absolute; top: 7%; left: 17%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 23px; height: 23px; }
+.schBottom div {  border-right: 1px solid var(--color-line); }
+.schBottom .schLoc { margin-left: 5px; position: relative;}
+.schBottom .locIco { width: 23px; height: 23px; }
 
 .detailBtn { transition: all .2s; }
 .detailBtn:hover { color: var(--color-main); }
@@ -34,14 +35,22 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px;}
 .dayLocAll { width: 90%; margin: 0 auto;}
 .dayAll { display: flex; align-items: center; flex-wrap: wrap;}
 .dayAll input[type="radio"] { display: none; }
-.dayAll input + label { margin: 0 8px 8px 0; padding: 8px 15px; border: 1px solid #ddd; border-radius: 20px; font-size: 14px; cursor: pointer; transition: all .2s;}
-.dayAll input + label:hover { background: #ddd;}
-.dayAll input:checked + label { background: var(--color-main); color: #fff; border-color: transparent;}
+.dayAll span.day { margin: 0 8px 8px 0; padding: 8px 11px; border: 1px solid #ddd; border-radius: 20px; font-size: 14px; cursor: pointer; transition: all .2s;}
+.dayAll span.day:hover { background: #ddd;}
+.dayAll .day.active {background: var(--color-main); color: #fff; border-color: transparent; }
 
-.dayLoc { display: none; padding: 10px; font-size: 14px;}
-.dayLoc.active { display: block; }
+.locList { height: 102px; overflow-y: auto; }
+.locList::-webkit-scrollbar { width: 12px; } 
+.locList::-webkit-scrollbar-thumb { background-color: #999; border: 3px solid #fff; border-radius: 20px; } 
+.locList::-webkit-scrollbar-track { background-color: transparent; }
 
-.dayLoc li { padding: 5px; }
+.locList ul { display: none; padding: 0 0 10px 10px; font-size: 15px;}
+.locList ul.active { display: block; }
+.locList ul li { position: relative; padding: 15px 0; padding-left: 25px; border-bottom: 1px solid #ddd;}
+.locList ul li:last-child { border: none;}
+.locList ul li::before { content: ''; position: absolute; width: 22px; height: 22px; top: 11px; left: -5px; background: url(../source/locGr.png) center center; background-size: cover; }
+.noLoc { display: flex; align-items: center; justify-content: center;}
+.noLoc li { margin: 20px 0 0 -10px; color: #555; font-size: 16px; }
 
 .pagination { margin: 40px auto; display: flex; align-items: center; justify-content: center;}
 .pagination .pageNum { display: inline-block; width: 25px; height: 25px; margin: 0 5px; font-family: pRegular; font-size: 14px; background: transparent; border-radius: 20px; color: #444; text-align: center; line-height: 25px; cursor: pointer; transition: all .2s;}
