--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -33,7 +33,12 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px;}
 .detailBtn:hover { color: var(--color-main); }
 
 .dayLocAll { width: 90%; margin: 0 auto;}
-.dayAll { display: flex; align-items: center; flex-wrap: wrap;}
+.dayAll { height: 50px; display: flex; align-items: center; overflow-y: hidden; overflow-x: scroll; }
+.dayAll::-webkit-scrollbar { height: 10px; cursor: pointer; transition: all .2s;} 
+.dayAll::-webkit-scrollbar-thumb { background-color: #8242f024; border: 3px solid #fff; border-radius: 20px;  } 
+.dayAll::-webkit-scrollbar-track { background-color: transparent; cursor: pointer; transition: all .2s; }
+.dayAll::-webkit-scrollbar-thumb:hover { background-color: #8242f073; }
+
 .dayAll input[type="radio"] { display: none; }
 .dayAll span.day { margin: 0 8px 8px 0; padding: 8px 11px; border: 1px solid #ddd; border-radius: 20px; font-size: 14px; cursor: pointer; transition: all .2s;}
 .dayAll span.day:hover { color: #000; background: #ddd;}
